--- a/src/pages/LocationStyle.css
+++ b/src/pages/LocationStyle.css
@@ -2,7 +2,23 @@
     overflow: hidden;
     position: relative;
     height: 0;
+    padding-bottom: 80%;
+}
+
+.video-responsive {
+    overflow: hidden;
+    position: relative;
+    height: 0;
     padding-bottom: 90%;
+}
+
+.video-responsive iframe {
+    left: 0;
+    top: 0;
+    border: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
 }
 
 .map-responsive iframe {
